# anoncreds-rs

./: .gitignore  Cargo.toml  Package.swift  index.js
.github/workflows/: pull-request.yml  release.yml
anoncred-kmm/: README.md  build.gradle.kts  settings.gradle.kts
anoncred-kmm/anoncred-wrapper-rust/: build.gradle.kts
anoncred-kmm/anoncred-wrapper-rust/.cargo/: config.toml
anoncred-kmm/anoncreds-kmp/: build.gradle.kts
anoncred-kmm/anoncreds-kmp/src/commonTest/kotlin/anoncred/wrapper/: IssuerTests.kt  ProverTests.kt
anoncred-kmm/anoncreds-kmp/src/jvmTest/kotlin/anoncred/wrapper/: Tests.kt
anoncred-kmm/testapp/src/androidTest/java/com/example/testapp/: IssuerTests.kt
src/services/: mod.rs
src/wasm/: helpers.rs  issuer.rs  mod.rs  prover.rs  verifier.rs
uniffi/: build-release-linux.sh
uniffi/output-frameworks/anoncreds-jvm/: build.gradle.kts
uniffi/output-frameworks/anoncreds-jvm/src/main/uniffi/anoncreds/: anoncreds.kt
uniffi/output-frameworks/anoncreds-jvm/src/main/uniffi/anoncreds_wrapper/: anoncreds_wrapper.kt
uniffi/output-frameworks/anoncreds-swift/AnoncredsSwift/Sources/Swift/: anoncreds_wrapper.swift
uniffi/src/: anoncreds.udl  lib.rs
uniffi/src/prover/: mod.rs
uniffi/src/types/: cred_req.rs  custom_types.rs  link_secret.rs  presentation.rs
uniffi/src/verifier/: mod.rs
wasm/: Cargo.toml  index.js
wasm/src/: credential.rs  credential_definition.rs  credential_offer.rs  credential_request.rs  credential_request_metadata.rs  credential_request_response.rs  credential_schema.rs  error.rs  issuer.rs  lib.rs  link_secret.rs  presentation.rs  prover.rs  utils.rs  verifier.rs
