[package]
name = "wasm"
version = "0.1.0"
edition = "2021"


[features]
wasm = ["ursa/portable", "anoncreds/zeroize", "wasm-bindgen", "wasm-logger", "console_error_panic_hook", "serde-wasm-bindgen"]


[dependencies]
anoncreds = {path = "..", default-features = false}
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "=1.4",  features = ["zeroize_derive"] }
wasm-bindgen = { version = "0.2.84", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version="0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true}



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.ursa]
git = "https://github.com/hyperledger/ursa.git"
rev = "390f004e3e91f1257da4bbcd6bc2d72f67b62c0f"
version = "0.3.7"
default-features = false
features = ["portable"]
